Added new Party class and adjusted naming.
