# controllers/ServerService.js
@@ -5,58 +5,67 @@ var gSwagger = require('../index');
 exports.addServer = function(args, res, next) {
 	/**
 	 * Registers server at service
+	 * 
 	 *
-	 *
-	 * servername String Name of the Server that is being registered. Must be unique.
-	 * ip String IPv4 address of gameserver
-	 * port Integer Port of gameserver
+	 * server_ip String IPv4 address of gameserver
+	 * server_port Integer Port of gameserver
 	 * no response value expected for this operation
 	 **/
 
 	var db = gSwagger.sql;
 
 	db.find(
-		{
-			ip: args.ip.value,
-			port: args.port.value
-		}, function(err, servers)
-		{
-			var serverFound = false;		
-			if(servers[0])
-			{			
-				console.log('\x1b[31m%s\x1b[0m', 'ERROR:', 'An error occured when trying to register a server (', args.ip.value, ':', args.port.value, ') - Server already registered');							
-				serverFound = true;
-				res.statusCode = 404;
-				res.end();						
-			}		
-			if(!serverFound)
-			{				
-				var newServer = {
-					name: args.servername.value,
-					ip: args.ip.value,
-					port: args.port.value,
-					ready: false,
-					ownerid: '0x0'
+	{
+		ip: args.server_ip.value,
+		port: args.server_port.value
+	}, function(err, servers)
+	{
+		var serverFound = false;		
+		if(servers[0])
+		{			
+			console.log('\x1b[31m%s\x1b[0m', 'ERROR:', 'An error occured when trying to register a server (', args.server_ip.value, ':', args.server_port.value, ') - Server already registered');							
+			serverFound = true;
+			res.statusCode = 404;
+			res.end();						
+		}		
+		if(!serverFound)
+		{				
+			var newServer = {				
+				SERVER_ip: args.server_ip.value,
+				SERVER_port: args.server_port.value,
+				SERVER_ownerid: '0x0',
+				SERVER_isReady: false
+			}
+
+			db.insert(newServer, function(err, insertedServer) {
+				if (err == null) {
+					console.log('\x1b[33m%s\x1b[0m', 'INFO: Added a new Server with the following ');
+					console.log('\x1b[33m%s\x1b[0m', 'RAW:', insertedServer);
+
+					res.statusCode = 200;
+					res.end();
+				} else {
+					console.log('\x1b[31m%s\x1b[0m', 'ERROR:', 'An error occured when trying to add the server.');
+					console.log('\x1b[33m%s\x1b[0m', 'RAW:', newServer);
+					console.log('\x1b[33m%s\x1b[0m', 'RAW ERROR:', err);
+
+					res.statusCode = 500;
+					res.end();
 				}
+			})
+		}			
+	});
+}
 
-				db.insert(newServer, function(err, insertedServer) {
-					if (err == null) {
-						console.log('\x1b[33m%s\x1b[0m', 'INFO: Added a new Server with the following ');
-						console.log('\x1b[33m%s\x1b[0m', 'RAW:', insertedServer);
-
-						res.statusCode = 200;
-						res.end();
-					} else {
-						console.log('\x1b[31m%s\x1b[0m', 'ERROR:', 'An error occured when trying to add the server.');
-						console.log('\x1b[33m%s\x1b[0m', 'RAW:', newServer);
-						console.log('\x1b[33m%s\x1b[0m', 'RAW ERROR:', err);
-
-						res.statusCode = 500;
-						res.end();
-					}
-				})
-			}			
-		});
+exports.resetServer = function(args, res, next) {
+	/**
+	 * Resets server status
+	 * 
+	 *
+	 * server_id String ID of the Server that is being reset. Must be unique.
+	 * no response value expected for this operation
+	 **/
+	res.end();
 }
 
 exports.setReady = function(args, res, next) {
@@ -64,7 +73,7 @@ exports.setReady = function(args, res, next) {
 	 * Sets Server ready status
 	 * 
 	 *
-	 * servername String Name of the Server that is being set ready. Must be unique.
+	 * server_id String ID of the Server that is being set ready. Must be unique.
 	 * no response value expected for this operation
 	 **/
 	res.end();
@@ -73,9 +82,9 @@ exports.setReady = function(args, res, next) {
 exports.unregisterServer = function(args, res, next) {
 	/**
 	 * Unregisters server at service.
+	 * 
 	 *
-	 *
-	 * servername String Name of the Server that is being unregistered. Must be unique.
+	 * server_id String ID of the Server that is being unregistered. Must be unique.
 	 * no response value expected for this operation
 	 **/
 
@@ -106,18 +115,8 @@ exports.unregisterServer = function(args, res, next) {
 		}
 	});
 
-
 	res.end();
 }
 
-exports.resetServer = function(args, res, next) {
-	/**
-	 * Resets server status
-	 * 
-	 *
-	 * servername String Name of the Server that is being reset. Must be unique.
-	 * no response value expected for this operation
-	 **/
-	res.end();
-  }
+
   
